// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadItem /> should render when [progress === 0] 1`] = `
<UploadItem__StyledUploadItem>
  <ProgressBar__AffixedProgressBar
    now={0}
  />
  <UploadItem__UploadItemTitle>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="upload"
    />
    <span>
      Foo.fa
    </span>
    <span>
      871.3KB
    </span>
  </UploadItem__UploadItemTitle>
</UploadItem__StyledUploadItem>
`;

exports[`<UploadItem /> should render when [progress > 0] 1`] = `
<UploadItem__StyledUploadItem>
  <ProgressBar__AffixedProgressBar
    now={51}
  />
  <UploadItem__UploadItemTitle>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="upload"
    />
    <span>
      Foo.fa
    </span>
    <span>
      871.3KB
    </span>
  </UploadItem__UploadItemTitle>
</UploadItem__StyledUploadItem>
`;
